--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 nav {
-  margin: 21px 83px;
+  margin: calc(1vw + 10px) 2vw 1vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,6 +81,8 @@ nav .download-cv a:hover {
   border-radius: 10px 0px 0px 10px;
   padding: 24px 0px;
   text-align: center;
+  -webkit-transition: all 10s ease-in-out;
+  transition: all 10s ease-in-out;
 }
 
 .card .left-side .profile {
