--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -491,12 +491,12 @@ table td {
 
 .wrapper.portfolio .popup .container .bottom .left-side .button {
   border-radius: 10px;
-  padding: 10px 25px 10px 25px;
+  padding: 10px 25px 10px 15px;
   background: #005481;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   display: inline-block;
-  margin: 5px 0 5px 5px;
+  margin: 5px 5px 5px 0px;
 }
 
 .wrapper.portfolio .popup .container .bottom .left-side .button.orange {
