--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -90,6 +90,25 @@ table td {
     }
 }
 
+.view-cv2{
+    position: absolute;
+    bottom: 10px; 
+    right: 10px;
+    border-radius: 10px;
+    background-color: white;
+    color: $primary;
+    padding-top: 10px;
+    width: 219px;
+    height: 35px;
+    text-align: center;
+    transition: 0.3s all ease;
+}
+
+.view-cv2:hover{
+    background: rgb(228, 236, 238);
+    transition: 0.3s all ease;
+}
+
 .bg-red {
     background: $orange !important;
     color: white !important;
@@ -364,7 +383,7 @@ table td {
             width: 100%;
             height: 100%;
             background: #05304be1;
-            overflow: hidden;
+            overflow: scroll;
             display: block;
             .bottom {
                 padding: 25px 40px 0px 40px;
@@ -376,10 +395,11 @@ table td {
                     flex: 0.8;
                     display: block;
                     .tech {
-                        display: inline;
+                        display: inline-block;
+                        width: 100%;
                         p {
-                            margin: 10px 0;
-                            display: inline;
+                            margin: 2px 0;
+                            display: inline-block;
                             padding: 0px 7px;
                             background: $orange;
                             color: white;
@@ -425,6 +445,7 @@ table td {
                     img {
                         width: 206px;
                         height: 206px;
+                        margin-bottom: 10px;
                         border-radius: 10px;
                         box-shadow: 0 20px 50px rgba(0, 0, 0, 0.2);
                     }
@@ -534,7 +555,7 @@ table td {
     table,
     tr,
     td {
-        padding: 0;
+        padding: 0 2px 0 0;
         margin: 0;
     }
     .find-me {
