--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -513,7 +513,9 @@ table td {
                 padding: 10px 20px 10px;
                 margin: 0 10px;
                 display: inline-block;
-                height: auto;
+                min-height: 300px;
+                height: 100%;
+                max-height: 350px;
                 background: white;
                 border-radius: 10px;
                 text-align: center;
