--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -308,7 +308,12 @@ body {
   height: 38.5em !important;
   width: 88%;
   max-width: 75em;
-  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
