--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -219,7 +219,11 @@ body {
     height: 38.5em !important;
     width: 88%;
     max-width: 75em;
-    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
     display: flex;
     overflow: hidden;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
