--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -308,12 +308,7 @@ body {
   height: 38.5em !important;
   width: 88%;
   max-width: 75em;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
