--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -140,6 +140,7 @@ table td {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-right: 10px;
 }
 
 #admin-testimonial {
@@ -420,11 +421,13 @@ table td {
 .wrapper.portfolio .top {
   height: 50px;
   background: #052335;
-  margin: 0 0 0 0;
+  margin: 0 20px 0 0 !important;
   padding: 0 0 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: fixed;
+  width: 100%;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
@@ -465,13 +468,14 @@ table td {
   width: 100%;
   height: 100%;
   background: #05304be1;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   display: block;
 }
 
 .wrapper.portfolio .popup .container .bottom {
   padding: 25px 40px 0px 40px;
-  margin: 0;
+  margin: 50px 0 0;
   height: 100%;
   color: white;
   display: -webkit-box;
@@ -577,7 +581,7 @@ table td {
 
 .wrapper.portfolio .viewer-container iframe {
   padding: 0;
-  margin: 0;
+  margin: 50px 0 0;
   width: 100%;
   height: 100%;
 }
