--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -374,7 +374,6 @@ table td {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  overflow-x: hidden;
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
 }
@@ -590,6 +589,10 @@ table td {
   display: none !important;
 }
 
+.wrapper.testimonial {
+  overflow: hidden;
+}
+
 .wrapper.testimonial h1 {
   margin: 0 auto 10px;
   width: 10em;
@@ -611,7 +614,6 @@ table td {
   height: 100%;
   width: 100%;
   margin: 0 auto;
-  overflow: hidden;
   padding: 10px 0;
   position: relative;
   opacity: 0;
@@ -634,7 +636,6 @@ table td {
   background: white;
   border-radius: 10px;
   text-align: center;
-  overflow: hidden;
   -webkit-transition: opacity 1s ease;
   transition: opacity 1s ease;
 }
