--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -90,9 +90,9 @@ table td {
     }
 }
 
-.view-cv2{
+.view-cv2 {
     position: absolute;
-    bottom: 10px; 
+    bottom: 10px;
     right: 10px;
     border-radius: 10px;
     background-color: white;
@@ -104,7 +104,7 @@ table td {
     transition: 0.3s all ease;
 }
 
-.view-cv2:hover{
+.view-cv2:hover {
     background: rgb(228, 236, 238);
     transition: 0.3s all ease;
 }
@@ -316,10 +316,12 @@ table td {
             transition: 1s ease;
         }
     }
+
     .slider {
         width: 100%;
         height: 100%;
         display: flex;
+        overflow-x: hidden;
         scroll-behavior: smooth;
         -webkit-overflow-scrolling: touch;
         .post {
@@ -378,7 +380,7 @@ table td {
         display: flex;
         justify-content: center;
         align-items: center;
-        
+
         .container {
             cursor: default;
             width: 100%;
@@ -440,7 +442,6 @@ table td {
                         transition: all 0.5s ease;
                         background: #cc4311;
                     }
-
                 }
                 .right-side {
                     flex: 0.2;
@@ -484,7 +485,6 @@ table td {
 
 //Testimonial
 .wrapper.testimonial {
-    overflow: hidden;
     h1 {
         margin: 0 auto 10px;
         width: 10em;
@@ -496,60 +496,59 @@ table td {
         margin: 0 auto;
         text-align: center;
     }
-    .testi-slider {
+    .testi-wrapper {
+        height: 100%;
+        width: 100%;
         margin: 10px;
-        .testi-wrapper {
+        overflow: hidden;
+        padding: 10px 0;
+        position: relative;
+        opacity: 0;
+        visibility: hidden !important;
+        transition: opacity 1s ease;
+        -webkit-transition: opacity 1s ease;
+        * {
+            cursor: pointer !important;
+        }
+        .card-container {
+            padding: 10px 20px 10px;
+            margin: 0 10px;
+            display: inline-block;
+            min-height: 300px;
             height: 100%;
-            width: 100%;
-            margin: 0 auto;
-            padding: 10px 0;
-            position: relative;
-            opacity: 0;
-            visibility: hidden !important;
+            max-height: 350px;
+            background: white;
+            border-radius: 10px;
+            text-align: center;
+            overflow: hidden;
             transition: opacity 1s ease;
-            -webkit-transition: opacity 1s ease;
-            * {
-                cursor: pointer !important;
-            }
-            .card-container {
-                padding: 10px 20px 10px;
-                margin: 0 10px;
-                display: inline-block;
-                min-height: 300px;
-                height: 100%;
-                max-height: 350px;
-                background: white;
-                border-radius: 10px;
-                text-align: center;
-                transition: opacity 1s ease;
-                .profile {
-                    margin: 0 auto;
+            .profile {
+                margin: 0 auto;
+                width: 132px;
+                height: 132px;
+                border-radius: 50%;
+                overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
                     width: 132px;
-                    height: 132px;
-                    border-radius: 50%;
-                    overflow: hidden;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    img {
-                        width: 132px;
-                        height: auto;
-                        flex-shrink: 0;
-                        min-width: 100%;
-                        min-height: 100%;
-                    }
-                }
-                h3,
-                p {
-                    color: $primary;
+                    height: auto;
+                    flex-shrink: 0;
+                    min-width: 100%;
+                    min-height: 100%;
                 }
             }
+            h3,
+            p {
+                color: $primary;
+            }
         }
-        .testi-wrapper.slick-initialized {
-            visibility: visible !important;
-            opacity: 1;
-            transition: opacity 1s ease;
-        }
+    }
+    .testi-wrapper.slick-initialized {
+        visibility: visible !important;
+        opacity: 1;
+        transition: opacity 1s ease;
     }
 }
 
@@ -611,6 +610,27 @@ table td {
     }
     100% {
         transform: translateY(0%);
+    }
+}
+
+@media only screen and (max-width: 624px) {
+    .wrapper.wrapper.testimonial {
+        .card-container{
+            border-bottom: 25px solid rgb(255, 255, 255);
+        }
+        .card-container.overflow {
+            overflow-y: scroll;
+            border-color: $white-smoke;
+        }
+        .card-container.overflow::after{
+            content: '⮃';
+            position: absolute;
+            bottom: 15px;
+            color: rgba(0, 0, 0, 0.5);
+            width: 15px;
+            height: 15px;
+            background-image: '../assets/graphics/arrow-down.svg';
+        }
     }
 }
 
