--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -499,8 +499,8 @@ table td {
     .testi-wrapper {
         height: 100%;
         width: 100%;
-        margin: 10px;
         overflow: hidden;
+        margin: 10px auto;
         padding: 10px 0;
         position: relative;
         opacity: 0;
