--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -607,8 +607,8 @@ table td {
 .wrapper.testimonial .testi-wrapper {
   height: 100%;
   width: 100%;
-  margin: 10px;
   overflow: hidden;
+  margin: 10px auto;
   padding: 10px 0;
   position: relative;
   opacity: 0;
