--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -756,9 +756,10 @@ table td {
     border-color: #f0f0f0;
   }
   .wrapper.wrapper.testimonial .card-container.overflow::after {
-    content: '⮃';
+    content: '👋';
     position: absolute;
-    bottom: 15px;
+    bottom: 13px;
+    margin: 0 auto;
     color: rgba(0, 0, 0, 0.5);
     width: 15px;
     height: 15px;
