--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -756,14 +756,13 @@ table td {
     border-color: #f0f0f0;
   }
   .wrapper.wrapper.testimonial .card-container.overflow::after {
-    content: '👋';
+    content: "👋";
     position: absolute;
     bottom: 13px;
-    margin: 0 auto;
+    margin: 0 0 0 0;
     color: rgba(0, 0, 0, 0.5);
     width: 15px;
     height: 15px;
-    background-image: '../assets/graphics/arrow-down.svg';
   }
 }
 
@@ -836,6 +835,12 @@ table td {
   .wrapper.portfolio .slider .post {
     -ms-grid-columns: auto auto;
         grid-template-columns: auto auto;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .wrapper.wrapper.testimonial .card-container {
+    overflow-y: scroll;
   }
 }
 /*# sourceMappingURL=pages.css.map */
