--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -93,7 +93,35 @@ table td {
   border-top-color: #005481;
 }
 
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .view-cv2 {
+  -webkit-animation: 5s fadeIn;
+          animation: 5s fadeIn;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
   position: absolute;
   bottom: 10px;
   right: 10px;
