--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -509,12 +509,23 @@ body {
 .card .side-bar a {
   display: block;
   margin: 60px 0;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .card .side-bar a i {
-  width: 40px;
   text-align: center;
   background-color: #024264;
 }
