--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -364,9 +364,14 @@ body {
         a {
             display: block;
             margin: 60px 0;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
             transition: all 0.2s ease;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             i {
-                width: 40px;
                 text-align: center;
                 background-color: $side-bar;
             }
