--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -761,6 +761,9 @@ table td {
   }
   .wrapper.portfolio .category a {
     display: block;
+    margin: -10px 0 15px -15px;
+    padding: 10px 0 0 15px;
+    height: 30px;
     text-align: left;
   }
   .wrapper.portfolio .category .active {
