--- a/styles/global.css
+++ b/styles/global.css
@@ -195,3 +195,12 @@ a {
     transition: all 0.3s ease;
   }
 }
+
+.hide-c {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
