--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -618,10 +618,10 @@ table td {
             display: block;
             a {
                 display: block;
-                margin: -10px 0 15px -15px;
-                padding: 10px 0 0 15px;
-                height: 30px;
+                height: 20px;
+                padding-top: 5px;
                 text-align: left;
+                margin-bottom: 10px;
             }
             .active {
                 text-align: left;
@@ -700,3 +700,4 @@ table td {
         }
     }
 }
+
