--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -78,6 +78,16 @@ body {
     margin: 15px 0 0;
 }
 
+.hide-c {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+  }
+
 .construction {
     background: white;
     height: 60px;
