--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -513,6 +513,7 @@ body {
   text-align: center;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  cursor: default;
 }
 
 .card .side-bar a {
@@ -532,6 +533,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: default;
 }
 
 .card .side-bar a i {
