--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -26,6 +26,15 @@ table td {
   padding: 0 calc(1vw + 10px) 0 0px;
 }
 
+.hide-c {
+  -webkit-touch-callout: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+}
+
 #blocker {
   position: fixed;
   width: 100%;
