--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -32,6 +32,16 @@ table td {
     padding: 0 calc(1vw + 10px) 0 0px;
 }
 
+.hide-c {
+    -webkit-touch-callout: none !important;
+    -webkit-user-select: none !important;
+    -khtml-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+}
+
 #blocker {
     position: fixed;
     width: 100%;
