--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -504,6 +504,7 @@ body {
   text-align: center;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  border: none;
 }
 
 .card .side-bar a {
