--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -361,6 +361,7 @@ body {
         background-color: $side-bar;
         text-align: center;
         transition: all 0.5s ease;
+        border: none;
         a {
             display: block;
             margin: 60px 0;
