--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -279,7 +279,7 @@ table td {
         a {
             padding-bottom: 10px;
             text-align: center;
-            transition: 0.3s ease;
+            transition: 0.2s ease;
         }
         a::after {
             content: "";
@@ -288,11 +288,11 @@ table td {
             width: 0;
             margin-top: 8px;
             -webkit-transition: 1s ease;
-            transition: 1s ease;
+            transition: .5s ease;
         }
         .active {
             color: $orange;
-            transition: 0.3s ease;
+            transition: 0.2s ease;
             text-align: center;
         }
         .active::after {
