--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -505,6 +505,8 @@ body {
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .card .side-bar a {
