--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -362,6 +362,7 @@ body {
         text-align: center;
         transition: all 0.5s ease;
         border: none;
+        box-shadow: none;
         a {
             display: block;
             margin: 60px 0;
