--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -751,6 +751,8 @@ table td {
   .wrapper.wrapper.testimonial .card-container.overflow {
     overflow-y: scroll;
     border-color: #f0f0f0;
+    -webkit-box-shadow: none;
+            box-shadow: none;
   }
   .wrapper.wrapper.testimonial .card-container.overflow::after {
     content: "👋";
