--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -751,10 +751,11 @@ table td {
   .wrapper.wrapper.testimonial .card-container.overflow {
     overflow-y: scroll;
     border-color: #f0f0f0;
-    -webkit-box-shadow: none;
-            box-shadow: none;
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
   }
   .wrapper.wrapper.testimonial .card-container.overflow::after {
+    padding-top: 5px;
     content: "👋";
     position: absolute;
     bottom: 13px;
