--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -607,9 +607,10 @@ table td {
         .card-container.overflow {
             overflow-y: scroll;
             border-color: $white-smoke;
-            box-shadow: none;
+            box-shadow: none !important;
         }
         .card-container.overflow::after {
+            padding-top: 5px;
             content: "👋";
             position: absolute;
             bottom: 13px;
