--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -468,11 +468,24 @@ body {
         opacity: 1;
     }
 }
+
+
+@keyframes noise {
+    0%{
+      background-position: 0 0;
+    }
+    100%{
+      background-position: 100% 100%;
+    }
+}
+
 @media only screen and (max-width: 1000px) {
     body {
-        background: $primary;
         transition: all 1s ease;
         margin: 0;
+        background: $primary;
+        background-image: url(texture.png);
+        animation: noise .5s linear infinite;
     }
     #particles-js {
         display: none;
@@ -499,7 +512,7 @@ body {
             display: block;
             position: fixed;
             z-index: 1;
-            height: inherit !important;
+            height: 100% !important;
         }
         .right-side {
             margin-left: 60px;
