--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -411,11 +411,12 @@ body {
         a:hover::after {
             content: "";
             position: absolute;
-            margin: -5px 10px 0 10px;
+            margin: -5px 0px 0 0px;
             background-color: white;
             border-radius: 5px 5px 5px 0;
             padding: 10px 0;
             width: 100px;
+            left: 60px;
             color: $primary;
             text-align: center;
             transition: all 0.5s ease;
