--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -702,7 +702,7 @@ body {
   .card {
     width: 100%;
     border-radius: 0;
-    height: 45em !important;
+    height: 100vh !important;
     -webkit-box-shadow: none;
             box-shadow: none;
   }
