--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -504,7 +504,7 @@ body {
     .card {
         width: 100%;
         border-radius: 0;
-        height: 45em !important;
+        height: 100vh !important;
         box-shadow: none;
         .left-side {
             display: none;
