--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -76,7 +76,6 @@ table td {
 .view-cv {
     animation: 5s fadeIn;
     animation-fill-mode: forwards;
-
     position: absolute;
     bottom: 10px;
     right: 10px;
@@ -230,6 +229,7 @@ table td {
     * {
         cursor: default;
     }
+    margin-bottom: 40px;
     //About me
     #timeline {
         li {
