--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -90,7 +90,7 @@ table td {
           animation: 5s fadeIn;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   right: 10px;
   border-radius: 10px;
