--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -352,8 +352,8 @@ table td {
   width: 0;
   margin-top: 8px;
   -webkit-transition: 1s ease;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
 }
 
 .wrapper.portfolio .category .active {
