--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -500,6 +500,7 @@ body {
 .card .side-bar {
   width: 60px;
   display: none;
+  height: 100vh;
   background-color: #024264;
   text-align: center;
   -webkit-transition: all 0.5s ease;
@@ -711,7 +712,7 @@ body {
     display: block;
     position: fixed;
     z-index: 1;
-    height: 100% !important;
+    height: 100vh !important;
   }
   .card .right-side {
     margin-left: 60px;
