--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -517,6 +517,7 @@ body {
         .right-side {
             margin-left: 60px;
             width: auto;
+            overflow: hidden;
             border-radius: 0;
             height: inherit !important;
             box-shadow: none;
