--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -717,6 +717,7 @@ body {
   .card .right-side {
     margin-left: 60px;
     width: auto;
+    overflow: hidden;
     border-radius: 0;
     height: inherit !important;
     -webkit-box-shadow: none;
