--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -713,6 +713,9 @@ table td {
 }
 
 @media only screen and (max-width: 1000px) {
+  body {
+    overflow: hidden;
+  }
   .wrapper.portfolio .slider .post {
     -ms-grid-columns: auto auto auto auto auto auto;
         grid-template-columns: auto auto auto auto auto auto;
