--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -572,7 +572,7 @@ table td {
 }
 
 @media only screen and (max-width: 1000px) {
-    body{
+    body, .wrapper{
         overflow: hidden;
     }
     .wrapper.portfolio {
