--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -850,7 +850,4 @@ table td {
 
 @media only screen and (max-width: 300px) {
   .wrapper.wrapper.testimonial .card-container {
-    overflow-y: scroll;
-  }
-}
-/*# sourceMappingURL=pages.css.map */
+    overflow-y: scroll
