--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -35,6 +35,85 @@ table td {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
 }
 
+#outerContainer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: none;
+  right: 0;
+}
+
+#outerContainer #ps-container {
+  width: 100%;
+  height: 80px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+
+#outerContainer #ps-container .circle {
+  border-radius: 50%;
+  background-color: #64b7f7;
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  opacity: 0;
+  -webkit-animation: scaleIn 4s infinite cubic-bezier(0.36, 0.11, 0.89, 0.32);
+          animation: scaleIn 4s infinite cubic-bezier(0.36, 0.11, 0.89, 0.32);
+}
+
+#outerContainer #ps-container .item {
+  z-index: 100;
+  padding: 5px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#outerContainer #ps-container .item:hover::before {
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  position: absolute;
+  content: "Please swap!";
+  margin-left: 35px;
+  margin-top: -3px;
+  font-family: "Quicksand";
+  padding: 5px 10px;
+  width: 100px;
+  background: #64b7f7;
+  border-radius: 10px;
+  color: white;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  -webkit-animation: slide-in 0.2s ease;
+          animation: slide-in 0.2s ease;
+}
+
+@-webkit-keyframes slide-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 #blocker {
   position: fixed;
   width: 100%;
@@ -775,6 +854,9 @@ table td {
 }
 
 @media only screen and (max-width: 524px) {
+  #outerContainer {
+    display: block;
+  }
   .wrapper.portfolio .category {
     display: block;
   }
@@ -832,6 +914,9 @@ table td {
 }
 
 @media only screen and (max-width: 400px) {
+  #outerContainer {
+    display: block;
+  }
   .wrapper.aboutme ul:before {
     content: "";
     width: 2px;
@@ -852,6 +937,32 @@ table td {
 @media only screen and (max-width: 300px) {
   .wrapper.wrapper.testimonial .card-container {
     overflow-y: scroll;
+  }
+}
+
+@-webkit-keyframes scaleIn {
+  from {
+    -webkit-transform: scale(0.5, 0.5);
+            transform: scale(0.5, 0.5);
+    opacity: 0.5;
+  }
+  to {
+    -webkit-transform: scale(2.5, 2.5);
+            transform: scale(2.5, 2.5);
+    opacity: 0;
+  }
+}
+
+@keyframes scaleIn {
+  from {
+    -webkit-transform: scale(0.5, 0.5);
+            transform: scale(0.5, 0.5);
+    opacity: 0.5;
+  }
+  to {
+    -webkit-transform: scale(2.5, 2.5);
+            transform: scale(2.5, 2.5);
+    opacity: 0;
   }
 }
 /*# sourceMappingURL=pages.css.map */
