--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -42,6 +42,64 @@ table td {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
 }
 
+
+//please swap
+#outerContainer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: none;
+    right: 0;
+    #ps-container {
+        width: 100%;
+        height: 80px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        .circle {
+            border-radius: 50%;
+            background-color: $canvas;
+            width: 25px;
+            height: 25px;
+            position: absolute;
+            opacity: 0;
+            animation: scaleIn 4s infinite cubic-bezier(0.36, 0.11, 0.89, 0.32);
+        }
+
+        .item {
+            z-index: 100;
+            padding: 5px;
+            transition: all 0.5s ease;
+        }
+        .item:hover::before{
+            transition: all 0.5s ease;
+            position: absolute;
+            content: "Please swap!";
+            margin-left: 35px;
+            margin-top: -3px;
+            font-family: "Quicksand";
+            padding: 5px 10px;
+            width: 100px;
+            background: $canvas;
+            border-radius: 10px;
+            color: white;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+            animation: slide-in 0.2s ease;
+        }
+    }
+}
+
+@keyframes slide-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 #blocker {
     position: fixed;
     width: 100%;
@@ -225,7 +283,7 @@ table td {
     }
 }
 
-.wrapper{
+.wrapper {
     overflow: hidden !important;
 }
 .wrapper.aboutme {
@@ -625,6 +683,7 @@ table td {
 }
 
 @media only screen and (max-width: 524px) {
+    #outerContainer {display: block;}
     .wrapper.portfolio {
         .category {
             display: block;
@@ -684,6 +743,7 @@ table td {
 }
 
 @media only screen and (max-width: 400px) {
+    #outerContainer {display: block;}
     .wrapper.aboutme {
         ul:before {
             content: "";
@@ -713,3 +773,13 @@ table td {
     }
 }
 
+@keyframes scaleIn {
+    from {
+        transform: scale(0.5, 0.5);
+        opacity: 0.5;
+    }
+    to {
+        transform: scale(2.5, 2.5);
+        opacity: 0;
+    }
+}
