--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -40,11 +40,10 @@ table td {
   bottom: 0;
   left: 0;
   display: none;
-  right: 0;
 }
 
 #outerContainer #ps-container {
-  width: 100%;
+  width: 80px;
   height: 80px;
   margin: 0 auto;
   display: -webkit-box;
