--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -49,9 +49,8 @@ table td {
     bottom: 0;
     left: 0;
     display: none;
-    right: 0;
     #ps-container {
-        width: 100%;
+        width: 80px;
         height: 80px;
         margin: 0 auto;
         display: flex;
