--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -683,6 +683,8 @@ body {
     background-image: url(texture.png);
     -webkit-animation: noise .5s linear infinite;
             animation: noise .5s linear infinite;
+    width: 100%;
+    padding: 0;
   }
   #particles-js {
     display: none;
@@ -701,7 +703,7 @@ body {
   .card {
     width: 100%;
     border-radius: 0;
-    height: 100vh !important;
+    height: 100% !important;
     -webkit-box-shadow: none;
             box-shadow: none;
   }
@@ -712,14 +714,14 @@ body {
     display: block;
     position: fixed;
     z-index: 1;
-    height: 100vh !important;
+    height: 100% !important;
   }
   .card .right-side {
     margin-left: 60px;
     width: auto;
     border-radius: 0;
     overflow: hidden;
-    height: 100vh !important;
+    height: inherit !important;
     -webkit-box-shadow: none;
             box-shadow: none;
   }
