--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -702,10 +702,9 @@ body {
   .card {
     width: 100%;
     border-radius: 0;
-    height: 100% !important;
+    height: calc(var(--vh, 1vh) * 100) !important;
     -webkit-box-shadow: none;
             box-shadow: none;
-    overflow: hidden;
   }
   .card .left-side {
     display: none;
@@ -714,16 +713,14 @@ body {
     display: block;
     position: fixed;
     z-index: 1;
-    height: 100% !important;
+    height: inherit !important;
   }
   .card .right-side {
     margin-left: 60px;
     width: auto;
     border-radius: 0;
     overflow: hidden;
-    height: -webkit-max-content !important;
-    height: -moz-max-content !important;
-    height: max-content !important;
+    height: inherit !important;
     -webkit-box-shadow: none;
             box-shadow: none;
   }
