--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -518,7 +518,7 @@ body {
             height: inherit !important;
         }
         .right-side {
-            margin-left: 60px;
+            margin-left: 0 60px 0 0;
             width: auto;
             border-radius: 0;
             overflow: hidden;
