--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -518,7 +518,7 @@ body {
             height: inherit !important;
         }
         .right-side {
-            margin-left: 0 60px 0 0;
+            margin: 0 0 0 60px;
             width: auto;
             border-radius: 0;
             overflow: hidden;
