--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -702,9 +702,11 @@ body {
   .card {
     width: 100%;
     border-radius: 0;
-    height: calc(var(--vh, 1vh) * 100) !important;
+    height: 100vh !important;
     -webkit-box-shadow: none;
             box-shadow: none;
+    -webkit-transition: min-height 500ms ease;
+    transition: min-height 500ms ease;
     margin: 0;
     padding: 0;
   }
